# wpforge

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/wpforge/: __init__.py  __main__.py  api.py  catalog.py  cli.py  config.py  differ.py  downloader.py  extractor.py  vulndb.py
tests/: test_catalog.py
